Add start script to package.json

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
